--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -25,7 +25,7 @@
               </span>
             </div>
             <ul class="nav nav-pills nav-stacked text-center">
-              <li ><a href="/home">Início</a></li>
+              <li ><a href="/">Início</a></li>
               <li><a href="/table">Projetos</a></li>
               <li><a href="#section2">Docentes</a></li>
               <li><a href="#section2">Agentes Financiadores</a></li>
