--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -4,7 +4,7 @@
 	<div class="col-sm-9">
 		<div class="row info-image">
 			<div class="col-sm-2">
-				<img src="static/images/LogoTipo1.png" class="balls">
+				<a href="/table"><img src="static/images/LogoTipo1.png" class="balls"></a>
 			</div>
 			<div class="col-sm-2">
 				<img src="static/images/LogoTipo2.png" class="balls">
